--- a/tasks/subtasks/install.yml
+++ b/tasks/subtasks/install.yml
@@ -20,7 +20,7 @@
         state: latest
       when: >
         ansible_distribution == 'Fedora' or
-        ansible_distribution == 'CentOS Stream'
+        ansible_distribution == 'CentOS'
 
     - name: Add the wireguard module and make sure it is loaded after reboots for Fedora/CentOS
       community.general.modprobe:
@@ -29,7 +29,7 @@
         persistent: present
       when: >
         ansible_distribution == 'Fedora' or
-        ansible_distribution == 'CentOS Stream'
+        ansible_distribution == 'CentOS'
 
     - name: Install python3-sqlalchemy on Debian/Ubuntu
       ansible.builtin.apt:
@@ -43,7 +43,7 @@
         state: latest
       when: >
         ansible_distribution == 'Fedora' or
-        ansible_distribution == 'CentOS Stream'
+        ansible_distribution == 'CentOS'
 
     - name: Install "Nginx" package on Debian/Ubuntu
       ansible.builtin.apt:
@@ -57,7 +57,7 @@
         state: latest
       when: >
         ansible_distribution == 'Fedora' or
-        ansible_distribution == 'CentOS Stream'
+        ansible_distribution == 'CentOS'
 
     - name: Install "Nginx Extras" package
       ansible.builtin.apt:
@@ -74,7 +74,7 @@
         group: root
       when: >
         ansible_distribution == 'Fedora' or
-        ansible_distribution == 'CentOS Stream'
+        ansible_distribution == 'CentOS'
 
     - name: Download WG UI
       ansible.builtin.unarchive:
