--- a/tasks/subtasks/check_supported.yml
+++ b/tasks/subtasks/check_supported.yml
@@ -16,7 +16,7 @@
       ansible.builtin.fail:
         msg: "I'm sorry your OS or Version has not been tested yet"
       when: >
-        ansible_distribution not in ["Debian", "Ubuntu", "Fedora", "CentOS Stream"] or
+        ansible_distribution not in ["Debian", "Ubuntu", "Fedora", "CentOS"] or
         ansible_distribution_version not in ["12", "22.04", "38", "9"]
 
     - name: Check if OS Arch is supported
