--- a/tasks/subtasks/install.yml
+++ b/tasks/subtasks/install.yml
@@ -6,17 +6,30 @@
   become: true
 
   tasks:
+    - name: Update all packages to their latest version on Debian/Ubuntu
+      ansible.builtin.apt:
+        name: "*"
+        state: latest
+        update_cache: true
+
     - name: Update repositories cache and install "wireguard" package on Debian/Ubuntu
       ansible.builtin.apt:
         name: wireguard
-        update_cache: true
         state: present
       when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+
+    - name: Update all packages to their latest version on Fedora/CentOS
+      ansible.builtin.dnf:
+        name: "*"
+        update_cache: true
+        state: latest
+      when: >
+        ansible_distribution == 'Fedora' or
+        ansible_distribution == 'CentOS'
 
     - name: Update repositories cache and install "wireguard-tools" package on Fedora/CentOS
       ansible.builtin.dnf:
         name: wireguard-tools
-        update_cache: true
         state: latest
       when: >
         ansible_distribution == 'Fedora' or
