--- a/tasks/subtasks/configure.yml
+++ b/tasks/subtasks/configure.yml
@@ -48,3 +48,10 @@
         group: root
         state: link
       when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+
+    - name: Enable nginx
+      ansible.builtin.systemd:
+        name: nginx
+        enabled: true
+        masked: no
+        state: restarted
