--- a/tasks/subtasks/enable_start.yml
+++ b/tasks/subtasks/enable_start.yml
@@ -28,3 +28,7 @@
         state: restarted
 
     - debug: msg="Happy Surfing"
+
+    - debug: msg="WireGuard GUI https://{{ ansible_default_ipv4.address }}:8443/
+
+    - debug: msg="PiHole Admin http://{{ ansible_default_ipv4.address }}/
