changed when syntax to make it easier to add/remove supported OS's and not have huge long chain of statements

--- a/tasks/subtasks/check_supported.yml
+++ b/tasks/subtasks/check_supported.yml
@@ -23,4 +23,4 @@
       ansible.builtin.fail:
         msg: "Im sorry, currently {{ ansible_architecture }} architecture is not supported yet"
       when: >
-        ansible_architecture != 'x86_64'
+        ansible_architecture not in ['x86_64']
