--- a/tasks/subtasks/firewall.yml
+++ b/tasks/subtasks/firewall.yml
@@ -10,15 +10,13 @@
       ansible.builtin.apt:
         name: ufw
         state: present
-      when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+      when: ansible_distribution in ["Debian", "Ubuntu"]
 
     - name: Install "firewalld" if not already installed on Fedora/CentOS
       ansible.builtin.dnf:
         name: firewalld
         state: latest
-      when: >
-        ansible_distribution == 'Fedora' or
-        ansible_distribution == 'CentOS'
+      when: ansible_distribution in ["Fedora", "CentOS"]
 
     - name: Allow all access to tcp port 22 for Debian/Ubuntu
       community.general.ufw:
@@ -28,8 +26,7 @@
         comment: allow ssh
       when: >
         SSH_LOCKDOWN |bool == false and
-        ansible_distribution == 'Debian' or
-        ansible_distribution == 'Ubuntu'
+        ansible_distribution in ["Debian", "Ubuntu"]
 
     - name: Allow all access to tcp port 22 for Fedora/CentOS
       ansible.posix.firewalld:
@@ -38,8 +35,8 @@
         immediate: true
         state: enabled
       when: >
-        ansible_distribution == 'Fedora' or
-        ansible_distribution == 'CentOS'
+        SSL_LOCKDOWN |bool == false and
+        ansible_distribution in ["Fedora", "CentOS"]
 
     - name: Allow only MGMT IP access to tcp port 22 for Debian/Ubuntu
       community.general.ufw:
@@ -50,8 +47,7 @@
         comment: allow mgmt to ssh
       when: >
         SSH_LOCKDOWN |bool == true and
-        ansible_distribution == 'Debian' or
-        ansible_distribution == 'Ubuntu'
+        ansible_distribution in ["Debian", "Ubuntu"]
 
     - name: Allow only MGMT IP only access to tcp port 22 Fedora/CentOS
       ansible.posix.firewalld:
@@ -60,8 +56,8 @@
         immediate: true
         state: enabled
       when: >
-        ansible_distribution == 'Fedora' or
-        ansible_distribution == 'CentOS'
+        SSH_LOCKDOWN |bool == true and
+        ansible_distribution in ["Fedora", "CentOS"]
 
     - name: Allow MGMT IP access to port {{ WGUI_PORT }} on Debian/Ubuntu
       community.general.ufw:
@@ -69,7 +65,7 @@
         port: '{{ WGUI_PORT }}'
         src: '{{ MGMT_IP }}'
         comment: allow mgmt to wgui
-      when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+      when: ansible_distribution in ["Debian", "Ubuntu"]
 
     - name: Allow MGMT IP access to port {{ WGUI_PORT }} on Fedora/CentOS
       ansible.posix.firewalld:
@@ -77,9 +73,7 @@
         permanent: true
         immediate: true
         state: enabled
-      when: >
-        ansible_distribution == 'Fedora' or
-        ansible_distribution == 'CentOS'
+      when: ansible_distribution in ["Fedora", "CentOS"]
 
     - name: Allow all access to udp port {{ WG_PORT }} on Debian/Ubuntu
       community.general.ufw:
@@ -87,7 +81,7 @@
         port: '{{ WG_PORT }}'
         proto: udp
         comment: allow wireguard
-      when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+      when: ansible_distribution in ["Debian", "Ubuntu"]
 
     - name: Allow all access to udp port {{ WG_PORT }} on Fedora/CentOS
       ansible.posix.firewalld:
@@ -95,9 +89,7 @@
         permanent: true
         immediate: true
         state: enabled
-      when: >
-        ansible_distribution == 'Fedora' or
-        ansible_distribution == 'CentOS'
+      when: ansible_distribution in ["Fedora", "CentOS"]
 
     - name: Allow VPN Clients access to Pihole for DNS on Debian/Ubuntu
       community.general.ufw:
@@ -106,7 +98,7 @@
         src: 10.252.1.0/24
         dest: '{{ ansible_default_ipv4.address }}'
         comment: allow clients pihole dns
-      when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+      when: ansible_distribution in ["Debian", "Ubuntu"]
 
     - name: Allow VPN Clients access to Pihole for DNS on Fedora/CentOS
       ansible.posix.firewalld:
@@ -114,9 +106,7 @@
         permanent: true
         immediate: true
         state: enabled
-      when: >
-        ansible_distribution == 'Fedora' or
-        ansible_distribution == 'CentOS'
+      when: ansible_distribution in ["Fedora", "CentOS"]
 
     - name: Allow MGMT access to Pihole UI on Debian/Ubuntu
       community.general.ufw:
@@ -124,7 +114,7 @@
         port: '80'
         src: '{{ MGMT_IP }}'
         comment: allow mgmt to pihole admin
-      when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+      when: ansible_distribution in ["Debian", "Ubuntu"]
 
     - name: Allow Client access to Pihole UI on Debian/Ubuntu
       community.general.ufw:
@@ -133,7 +123,7 @@
         src: 10.252.1.0/24
         dest: '{{ ansible_default_ipv4.address }}'
         comment: allow mgmt to pihole admin
-      when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+      when: ansible_distribution in ["Debian", "Ubuntu"]
 
     - name: Allow MGMT access to Pihole UI on Fedora/CentOS
       ansible.posix.firewalld:
@@ -141,16 +131,14 @@
         permanent: true
         immediate: true
         state: enabled
-      when: >
-        ansible_distribution == 'Fedora' or
-        ansible_distribution == 'CentOS'
+      when: ansible_distribution in ["Fedora", "CentOS"]
 
     - name: Enable UFW
       community.general.ufw:
         state: enabled
-      when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+      when: ansible_distribution in ["Debian", "Ubuntu"]
 
     - name: Reload UFW
       community.general.ufw:
         state: reloaded
-      when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+      when: ansible_distribution in ["Debian", "Ubuntu"]
