--- a/tasks/subtasks/cloudflared.yml
+++ b/tasks/subtasks/cloudflared.yml
@@ -11,13 +11,13 @@
         path: /usr/share/keyrings
         state: directory
         mode: '0755'
-      when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+      when: ansible_distribution in ["Debian", "Ubuntu"]
 
     - name: Download keyring file from cloudflare for Debian/Ubuntu
       ansible.builtin.get_url:
         url: https://pkg.cloudflare.com/cloudflare-main.gpg
         dest: /usr/share/keyrings/cloudflare-main.gpg
-      when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+      when: ansible_distribution in ["Debian", "Ubuntu"]
 
     - name: Copy over cloudflared apt repo for Debian
       template:
@@ -44,25 +44,21 @@
         mode: u=rw,g=r,o=r
         owner: root
         group: root
-      when: >
-        ansible_distribution == 'Fedora' or
-        ansible_distribution == 'CentOS'
+      when: ansible_distribution in ["Fedora", "CentOS"]
 
     - name: Update repositories cache and install "cloudflared" package for Debian/Ubuntu
       ansible.builtin.apt:
         name: cloudflared
         update_cache: true
         state: present
-      when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+      when: ansible_distribution in ["Debian", "Ubuntu"]
 
     - name: Update repositories cache and install "cloudflared" package RedHat/Alma/Amazon
       ansible.builtin.dnf:
         name: cloudflared
         update_cache: true
         state: latest
-      when: >
-        ansible_distribution == 'Fedora' or
-        ansible_distribution == 'CentOS'
+      when: ansible_distribution in ["Fedora", "CentOS"]
 
     - name: Add cloudflared user
       ansible.builtin.user:
