--- a/tasks/subtasks/self_signed_cert.yml
+++ b/tasks/subtasks/self_signed_cert.yml
@@ -9,22 +9,18 @@
     - name: Create private key (RSA, 4096 bits) for Debian/Ubuntu
       community.crypto.openssl_privatekey:
         path: /etc/ssl/private/{{ SERVER_FQDN }}.key
-      when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+      when: ansible_distribution in ["Debian", "Ubuntu"]
 
     - name: Install "python3-cryptography" package on Fedora/CentOS
       ansible.builtin.dnf:
         name: python3-cryptography
         state: latest
-      when: >
-        ansible_distribution == 'Fedora' or
-        ansible_distribution == 'CentOS'
+      when: ansible_distribution in ["Fedora", "CentOS"]
 
     - name: Create private key (RSA, 4096 bits) for Fedora/CentOS
       community.crypto.openssl_privatekey:
         path: /etc/ssl/{{ SERVER_FQDN }}.key
-      when: >
-        ansible_distribution == 'Fedora' or
-        ansible_distribution == 'CentOS'
+      when: ansible_distribution in ["Fedora", "CentOS"]
 
     - name: Create certificate signing request (CSR) for self-signed certificate for Debian/Ubuntu
       community.crypto.openssl_csr:
@@ -34,7 +30,7 @@
         organization_name: "{{ ORG_NAME }}"
         subject_alt_name:
           - "DNS:{{ SERVER_FQDN }}"
-      when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+      when: ansible_distribution in ["Debian", "Ubuntu"]
 
     - name: Create certificate signing request (CSR) for self-signed certificate for Fedora/CentOS
       community.crypto.openssl_csr:
@@ -44,9 +40,7 @@
         organization_name: "{{ ORG_NAME }}"
         subject_alt_name:
           - "DNS:{{ SERVER_FQDN }}"
-      when: >
-        ansible_distribution == 'Fedora' or
-        ansible_distribution == 'CentOS'
+      when: ansible_distribution in ["Fedora", "CentOS"]
 
     - name: Create self-signed certificate from CSR for Debian/Ubuntu
       community.crypto.x509_certificate:
@@ -55,7 +49,7 @@
         privatekey_path: /etc/ssl/private/{{ SERVER_FQDN }}.key
         entrust_not_after: +1094d
         provider: selfsigned
-      when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+      when: ansible_distribution in ["Debian", "Ubuntu"]
 
     - name: Create self-signed certificate from CSR for Fedora/CentOS
       community.crypto.x509_certificate:
@@ -64,9 +58,7 @@
         privatekey_path: /etc/ssl/{{ SERVER_FQDN }}.key
         entrust_not_after: +1094d
         provider: selfsigned
-      when: >
-        ansible_distribution == 'Fedora' or
-        ansible_distribution == 'CentOS'
+      when: ansible_distribution in ["Fedora", "CentOS"]
 
     - name: Enable nginx and reload now that cert is available
       ansible.builtin.systemd:
